[project]
name = "data-visualizer"
version = "1.0.0"
description = ""
authors = [
    {name = "Matthew Hung",email = "matthew.k.hung@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "plotly (>=5.24.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

